--- a/motorsports.html
+++ b/motorsports.html
@@ -96,10 +96,20 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/f1-streams">Formula 1 - Las Vegas Grand Prix</a></td>
-<td>November 2022 2025 20:00 PM</td>
-<td><span class="countdown-timer" data-end="November 30, 2025 23:00:00" data-start="November 22, 2025 20:00:00"></span>
-</tr>
+<td><a href="https://roxiestreams.live/supercross">FIM Supercross - Australian GP</a></td>
+<td>November 29, 2025 01:30 AM</td>
+<td><span class="countdown-timer" data-end="November 29, 2025 13:30:00" data-start="November 29, 2025 01:30:00"></span>
+</td></tr>
+<tr>
+<td><a href="https://roxiestreams.live/f1-streams">Formula 1 - Sprint</a></td>
+<td>November 29, 2025 06:00 AM</td>
+<td><span class="countdown-timer" data-end="November 29, 2025 18:00:00" data-start="November 29, 2025 06:00:00"></span>
+</td></tr>
+<tr>
+<td><a href="https://roxiestreams.live/f1-streams">Formula 1 - Qualifying</a></td>
+<td>November 29, 2025 10:00 AM</td>
+<td><span class="countdown-timer" data-end="November 29, 2025 22:00:00" data-start="November 29, 2025 10:00:00"></span>
+</td></tr>
 <tr>
 </tr></tbody>
 </table>
