--- a/nba.html
+++ b/nba.html
@@ -291,6 +291,138 @@
       </tr>
      </tbody>
     </table>
+    <h2>
+     NBA Schedule for November 29, 2025
+    </h2>
+    <table id="eventsTable">
+     <thead>
+      <tr>
+       <th>
+        Event
+       </th>
+       <th>
+        Start Time
+       </th>
+       <th>
+        Countdown
+       </th>
+      </tr>
+     </thead>
+     <tbody>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-1">
+         Boston Celtics vs Minnesota Timberwolves
+        </a>
+       </td>
+       <td>
+        November 29, 2025 2:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 30, 2025 2:00 PM:00" data-start="November 29, 2025 2:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-2">
+         Toronto Raptors vs Charlotte Hornets
+        </a>
+       </td>
+       <td>
+        November 29, 2025 3:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 30, 2025 3:00 PM:00" data-start="November 29, 2025 3:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-3">
+         Chicago Bulls vs Indiana Pacers
+        </a>
+       </td>
+       <td>
+        November 29, 2025 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 30, 2025 4:30 PM:00" data-start="November 29, 2025 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-4">
+         Detroit Pistons vs Miami Heat
+        </a>
+       </td>
+       <td>
+        November 29, 2025 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 30, 2025 5:00 PM:00" data-start="November 29, 2025 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-5">
+         Brooklyn Nets vs Milwaukee Bucks
+        </a>
+       </td>
+       <td>
+        November 29, 2025 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 30, 2025 5:00 PM:00" data-start="November 29, 2025 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-6">
+         New Orleans Pelicans vs Golden State Warriors
+        </a>
+       </td>
+       <td>
+        November 29, 2025 5:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 30, 2025 5:30 PM:00" data-start="November 29, 2025 5:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-7">
+         Denver Nuggets vs Phoenix Suns
+        </a>
+       </td>
+       <td>
+        November 29, 2025 6:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 30, 2025 6:00 PM:00" data-start="November 29, 2025 6:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-8">
+         Dallas Mavericks vs Los Angeles Clippers
+        </a>
+       </td>
+       <td>
+        November 29, 2025 7:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 30, 2025 7:00 PM:00" data-start="November 29, 2025 7:00 PM:00">
+        </span>
+       </td>
+      </tr>
+     </tbody>
+    </table>
     <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
      <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
       <li class="nav-item">
