--- a/soccer.html
+++ b/soccer.html
@@ -95,39 +95,115 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-1">Borussia M'gladbach vs RB Leipzig</a>
-<td>November 28, 2025 11:30 AM</td>
-<td><span class="countdown-timer" data-end="November 29, 2025 10:30:00" data-start="November 28, 2025 11:30:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-1">Leicester City vs Sheffield United</a>
+<td>November 29, 2025 04:30 AM</td>
+<td><span class="countdown-timer" data-end="November 30, 2025 03:30:00" data-start="November 29, 2025 04:30:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-2">Como vs Sassuolo</a>
-<td>November 28, 2025 11:45 AM</td>
-<td><span class="countdown-timer" data-end="November 29, 2025 10:45:00" data-start="November 28, 2025 11:45:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-2">Mallorca vs Osasuna</a>
+<td>November 29, 2025 05:00 AM</td>
+<td><span class="countdown-timer" data-end="November 30, 2025 04:00:00" data-start="November 29, 2025 05:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-3">Metz vs Rennes</a>
-<td>November 28, 2025 11:45 AM</td>
-<td><span class="countdown-timer" data-end="November 29, 2025 10:45:00" data-start="November 28, 2025 11:45:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-3">Bayern München vs St. Pauli</a>
+<td>November 29, 2025 06:30 AM</td>
+<td><span class="countdown-timer" data-end="November 30, 2025 05:30:00" data-start="November 29, 2025 06:30:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-4">Getafe vs Elche</a>
-<td>November 28, 2025 12:00 PM</td>
-<td><span class="countdown-timer" data-end="November 29, 2025 11:00:00" data-start="November 28, 2025 12:00:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-4">Brentford vs Burnley</a>
+<td>November 29, 2025 07:00 AM</td>
+<td><span class="countdown-timer" data-end="November 30, 2025 06:00:00" data-start="November 29, 2025 07:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-5">Cobresal vs Colo Colo</a>
-<td>November 28, 2025 13:30 PM</td>
-<td><span class="countdown-timer" data-end="November 29, 2025 12:30:00" data-start="November 28, 2025 13:30:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-5">Manchester City vs Leeds United</a>
+<td>November 29, 2025 07:00 AM</td>
+<td><span class="countdown-timer" data-end="November 30, 2025 06:00:00" data-start="November 29, 2025 07:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-6">Juventude vs Bahia</a>
-<td>November 28, 2025 14:00 PM</td>
-<td><span class="countdown-timer" data-end="November 29, 2025 13:00:00" data-start="November 28, 2025 14:00:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-6">Sunderland vs Bournemouth</a>
+<td>November 29, 2025 07:00 AM</td>
+<td><span class="countdown-timer" data-end="November 30, 2025 06:00:00" data-start="November 29, 2025 07:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-7">Vasco Da Gama vs Internacional</a>
-<td>November 28, 2025 14:30 PM</td>
-<td><span class="countdown-timer" data-end="November 29, 2025 13:30:00" data-start="November 28, 2025 14:30:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-1">West Bromwich Albion vs Swansea City</a>
+<td>November 29, 2025 07:00 AM</td>
+<td><span class="countdown-timer" data-end="November 30, 2025 06:00:00" data-start="November 29, 2025 07:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-8">Santos vs Sport Recife</a>
-<td>November 28, 2025 16:30 PM</td>
-<td><span class="countdown-timer" data-end="November 29, 2025 15:30:00" data-start="November 28, 2025 16:30:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-2">Barcelona vs Deportivo Alavés</a>
+<td>November 29, 2025 07:15 AM</td>
+<td><span class="countdown-timer" data-end="November 30, 2025 06:15:00" data-start="November 29, 2025 07:15:00"></span></td>
 <tr>
-</tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></tbody></table>
+<td><a href="https://roxiestreams.live/soccer-streams-7">Monaco vs PSG</a>
+<td>November 29, 2025 08:00 AM</td>
+<td><span class="countdown-timer" data-end="November 30, 2025 07:00:00" data-start="November 29, 2025 08:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-1">Juventus vs Cagliari</a>
+<td>November 29, 2025 09:00 AM</td>
+<td><span class="countdown-timer" data-end="November 30, 2025 08:00:00" data-start="November 29, 2025 09:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-8">Everton vs Newcastle</a>
+<td>November 29, 2025 09:30 AM</td>
+<td><span class="countdown-timer" data-end="November 30, 2025 08:30:00" data-start="November 29, 2025 09:30:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-2">Levante vs Athletic Club</a>
+<td>November 29, 2025 09:30 AM</td>
+<td><span class="countdown-timer" data-end="November 30, 2025 08:30:00" data-start="November 29, 2025 09:30:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-9">Bayer Leverkusen vs Dortmund</a>
+<td>November 29, 2025 09:30 AM</td>
+<td><span class="countdown-timer" data-end="November 30, 2025 08:30:00" data-start="November 29, 2025 09:30:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-10">Nacional vs Benfica</a>
+<td>November 29, 2025 10:00 AM</td>
+<td><span class="countdown-timer" data-end="November 30, 2025 09:00:00" data-start="November 29, 2025 10:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-7">Paris vs Auxerre</a>
+<td>November 29, 2025 10:00 AM</td>
+<td><span class="countdown-timer" data-end="November 30, 2025 09:00:00" data-start="November 29, 2025 10:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-11">Vitória vs Mirassol</a>
+<td>November 29, 2025 11:00 AM</td>
+<td><span class="countdown-timer" data-end="November 30, 2025 10:00:00" data-start="November 29, 2025 11:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-12">Milan vs Lazio</a>
+<td>November 29, 2025 11:45 AM</td>
+<td><span class="countdown-timer" data-end="November 30, 2025 10:45:00" data-start="November 29, 2025 11:45:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-2">Atlético Madrid vs Real Oviedo</a>
+<td>November 29, 2025 12:00 PM</td>
+<td><span class="countdown-timer" data-end="November 30, 2025 11:00:00" data-start="November 29, 2025 12:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-13">Tottenham Hotspur vs Fulham</a>
+<td>November 29, 2025 12:00 PM</td>
+<td><span class="countdown-timer" data-end="November 30, 2025 11:00:00" data-start="November 29, 2025 12:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-14">Marseille vs Toulouse</a>
+<td>November 29, 2025 12:05 PM</td>
+<td><span class="countdown-timer" data-end="November 30, 2025 11:05:00" data-start="November 29, 2025 12:05:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-7">Palmeiras vs Flamengo</a>
+<td>November 29, 2025 13:00 PM</td>
+<td><span class="countdown-timer" data-end="November 30, 2025 12:00:00" data-start="November 29, 2025 13:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-15">Inter Miami vs New York City</a>
+<td>November 29, 2025 15:00 PM</td>
+<td><span class="countdown-timer" data-end="November 30, 2025 14:00:00" data-start="November 29, 2025 15:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-16">América vs Monterrey</a>
+<td>November 29, 2025 15:00 PM</td>
+<td><span class="countdown-timer" data-end="November 30, 2025 14:00:00" data-start="November 29, 2025 15:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-17">Ceará vs Cruzeiro</a>
+<td>November 29, 2025 16:00 PM</td>
+<td><span class="countdown-timer" data-end="November 30, 2025 15:00:00" data-start="November 29, 2025 16:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-16">Toluca vs Juárez</a>
+<td>November 29, 2025 17:05 PM</td>
+<td><span class="countdown-timer" data-end="November 30, 2025 16:05:00" data-start="November 29, 2025 17:05:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-18">San Diego vs Vancouver Whitecaps</a>
+<td>November 29, 2025 18:00 PM</td>
+<td><span class="countdown-timer" data-end="November 30, 2025 17:00:00" data-start="November 29, 2025 18:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-19">Tijuana vs Tigres UANL</a>
+<td>November 29, 2025 19:10 PM</td>
+<td><span class="countdown-timer" data-end="November 30, 2025 18:10:00" data-start="November 29, 2025 19:10:00"></span></td>
+<tr>
+</tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></tbody></table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
 <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
