--- a/nfl.html
+++ b/nfl.html
@@ -4,9 +4,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1" name="viewport"/>
-<title>
-   Roxiestreams - Watch Live Sports, F1, UFC, NFL, TV
-  </title>
+<title>Roxiestreams - Watch Live Sports, F1, UFC, NFL, TV</title>
 <meta content="Free PPV ufc, TV, NBA, NFL, and F1 streams" name="description"/>
 <meta content="Roxiestreams, ppv, boxing, dazn, f1, ufc, nba, for, stream, online, free, mrgamingstreams, f1, tv, nfl" name="keywords"/>
 <link href="https://fonts.googleapis.com" rel="preconnect"/>
@@ -15,7 +13,7 @@
 <link href="css/main.css" rel="stylesheet" type="text/css"/>
 <link href="imgs/iconn.png" rel="shortcut icon" type="x-icon"/>
 <style>
-   <script>
+<script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
@@ -63,225 +61,127 @@
         h2 {
             color: pink;
         }
-  </style>
+    </style>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg bg-black">
 <div class="container-fluid">
-<a class="navbar-brand" href="https://roxiestreams.live/">
-     RoxieStreams
-    </a>
+<a class="navbar-brand" href="https://roxiestreams.live/">RoxieStreams</a>
 <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbarSupportedContent" data-bs-toggle="collapse" type="button">
-<span class="navbar-toggler-icon">
-</span>
+<span class="navbar-toggler-icon"></span>
 </button>
 <div class="collapse navbar-collapse" id="navbarSupportedContent">
 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-<li class="nav-item">
-<a class="nav-link" href="https://roxiestreams.live/soccer">
-        Soccer
-       </a>
-</li>
-<li class="nav-item">
-<a class="nav-link" href="https://roxiestreams.live/mlb">
-        MLB
-       </a>
-</li>
-<li class="nav-item">
-<a class="nav-link" href="https://roxiestreams.live/nba">
-        NBA
-       </a>
-</li>
-<li class="nav-item">
-<a class="nav-link" href="https://roxiestreams.live/nfl">
-        NFL
-       </a>
-</li>
-<li class="nav-item">
-<a class="nav-link" href="https://roxiestreams.live/fighting">
-        Fighting
-       </a>
-</li>
-<li class="nav-item">
-<a class="nav-link" href="https://roxiestreams.live/motorsports">
-        Motorsports
-       </a>
-</li>
-<li class="nav-item">
-<a class="nav-link" href="https://discord.gg/JhkVmejRmn">
-        Stream Request (Discord)
-       </a>
-</li>
+<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/soccer">Soccer</a></li>
+<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/mlb">MLB</a></li>
+<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/nba">NBA</a></li>
+<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/nfl">NFL</a></li>
+<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/fighting">Fighting</a></li>
+<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/motorsports">Motorsports</a></li>
+<li class="nav-item"><a class="nav-link" href="https://discord.gg/JhkVmejRmn">Stream Request (Discord)</a></li>
 </ul>
 </div>
-</div>
-</nav>
+</div></nav>
 <div class="container container-fluid pt-2 text-white">
 <div class="mt-5">
-<h2 class="m-0" style="font-family: 'Kanit', sans-serif; font-weight: bold;">
-     Upcoming NFL Events
-    </h2>
+<h2 class="m-0" style="font-family: 'Kanit', sans-serif; font-weight: bold;">Upcoming Soccer Events</h2>
 <table id="eventsTable">
 <thead>
 <tr>
-<th>
-        Event
-       </th>
-<th>
-        Start Time
-       </th>
-<th>
-        Countdown
-       </th>
+<th>Event</th>
+<th>Start Time</th>
+<th>Countdown</th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td>
-<a href="https://roxiestreams.live/nfl-streams-1">
-         Chicago Bears vs Philadelphia Eagles
-        </a>
-<td>
-         November 28, 2025 12:00 PM
-        </td>
-<td>
-<span class="countdown-timer" data-end="November 29, 2025 11:00:00" data-start="November 28, 2025 12:00:00">
-</span>
-</td>
+<td><a href="https://roxiestreams.live/ncaa-streams-1">Ohio State vs Michigan/a>
+<td>November 29, 2025 04:30 AM</td>
+<td><span class="countdown-timer" data-end="November 30, 2025 03:30:00" data-start="November 29, 2025 04:30:00"></span></td>
 <tr>
-<td>
-<a href="https://roxiestreams.live/ncaa-streams-2">
-           Air Force vs Colorado State
-          </a>
-<td>
-           November 28, 2025 12:00 PM
-          </td>
-<td>
-<span class="countdown-timer" data-end="November 29, 2025 11:00:00" data-start="November 28, 2025 12:00:00">
-</span>
-</td>
+<td><a href="https://roxiestreams.live/ncaa-streams-2">Texas Tech vs West Virginia</a>
+<td>November 29, 2025 05:00 AM</td>
+<td><span class="countdown-timer" data-end="November 30, 2025 04:00:00" data-start="November 29, 2025 05:00:00"></span></td>
 <tr>
-<td>
-<a href="https://roxiestreams.live/ncaa-streams-3">
-             Georgia vs Georgia Tech
-            </a>
-<td>
-             November 28, 2025 12:30 PM
-            </td>
-<td>
-<span class="countdown-timer" data-end="November 29, 2025 11:30:00" data-start="November 28, 2025 12:30:00">
-</span>
-</td>
+<td><a href="https://roxiestreams.live/ncaa-streams-3">Miami (FL) vs Pitt</a>
+<td>November 29, 2025 06:30 AM</td>
+<td><span class="countdown-timer" data-end="November 30, 2025 05:30:00" data-start="November 29, 2025 06:30:00"></span></td>
 <tr>
-<td>
-<a href="https://roxiestreams.live/ncaa-streams-4">
-               Temple vs North Texas
-              </a>
-<td>
-               November 28, 2025 12:30 PM
-              </td>
-<td>
-<span class="countdown-timer" data-end="November 29, 2025 11:30:00" data-start="November 28, 2025 12:30:00">
-</span>
-</td>
+<td><a href="https://roxiestreams.live/ncaa-streams-4">Houston vs Baylor</a>
+<td>November 29, 2025 07:00 AM</td>
+<td><span class="countdown-timer" data-end="November 30, 2025 06:00:00" data-start="November 29, 2025 07:00:00"></span></td>
 <tr>
-<td>
-<a href="https://roxiestreams.live/ncaa-streams-5">
-                 San Diego State vs New Mexico
-                </a>
-<td>
-                 November 28, 2025 12:30 PM
-                </td>
-<td>
-<span class="countdown-timer" data-end="November 29, 2025 11:30:00" data-start="November 28, 2025 12:30:00">
-</span>
-</td>
+<td><a href="https://roxiestreams.live/ncaa-streams-5">Colorado vs Kansas State</a>
+<td>November 29, 2025 07:00 AM</td>
+<td><span class="countdown-timer" data-end="November 30, 2025 06:00:00" data-start="November 29, 2025 07:00:00"></span></td>
 <tr>
-<td>
-<a href="https://roxiestreams.live/ncaa-streams-6">
-                   Boise State vs Utah State
-                  </a>
-<td>
-                   November 28, 2025 13:00 PM
-                  </td>
-<td>
-<span class="countdown-timer" data-end="November 29, 2025 12:00:00" data-start="November 28, 2025 13:00:00">
-</span>
-</td>
+<td><a href="https://roxiestreams.live/ncaa-streams-6">Ball State vs Miami (Ohio)</a>
+<td>November 29, 2025 07:00 AM</td>
+<td><span class="countdown-timer" data-end="November 30, 2025 06:00:00" data-start="November 29, 2025 07:00:00"></span></td>
 <tr>
-<td>
-<a href="https://roxiestreams.live/ncaa-streams-7">
-                     Indiana vs Purdue
-                    </a>
-<td>
-                     November 28, 2025 16:30 PM
-                    </td>
-<td>
-<span class="countdown-timer" data-end="November 29, 2025 15:30:00" data-start="November 28, 2025 16:30:00">
-</span>
-</td>
+<td><a href="https://roxiestreams.live/ncaa-streams-7">Clemson vs South Carolina</a>
+<td>November 29, 2025 07:00 AM</td>
+<td><span class="countdown-timer" data-end="November 30, 2025 06:00:00" data-start="November 29, 2025 07:00:00"></span></td>
 <tr>
-<td>
-<a href="https://roxiestreams.live/ncaa-streams-8">
-                       Texas A&amp;M vs Texas
-                      </a>
-<td>
-                       November 28, 2025 16:30 PM
-                      </td>
-<td>
-<span class="countdown-timer" data-end="November 29, 2025 15:30:00" data-start="November 28, 2025 16:30:00">
-</span>
-</td>
+<td><a href="https://roxiestreams.live/ncaa-streams-8">Iowa State vs Oklahoma State</a>
+<td>November 29, 2025 07:15 AM</td>
+<td><span class="countdown-timer" data-end="November 30, 2025 06:15:00" data-start="November 29, 2025 07:15:00"></span></td>
 <tr>
-<td>
-<a href="https://roxiestreams.live/ncaa-streams-9">
-                         Arizona vs Arizona State
-                        </a>
-<td>
-                         November 28, 2025 17:00 PM
-                        </td>
-<td>
-<span class="countdown-timer" data-end="November 29, 2025 16:00:00" data-start="November 28, 2025 17:00:00">
-</span>
-</td>
+<td><a href="https://roxiestreams.live/ncaa-streams-9">Kentucky vs Louisville</a>
+<td>November 29, 2025 08:00 AM</td>
+<td><span class="countdown-timer" data-end="November 30, 2025 07:00:00" data-start="November 29, 2025 08:00:00"></span></td>
 <tr>
-</tr>
-</td>
-</tr>
-</td>
-</tr>
-</td>
-</tr>
-</td>
-</tr>
-</td>
-</tr>
-</td>
-</tr>
-</td>
-</tr>
-</td>
-</tr>
-</td>
-</tr>
-</tbody>
-</table>
+<td><a href="https://roxiestreams.live/ncaa-streams-10">UCF vs BYU</a>
+<td>November 29, 2025 09:00 AM</td>
+<td><span class="countdown-timer" data-end="November 30, 2025 08:00:00" data-start="November 29, 2025 09:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/ncaa-streams-11">Boston College vs Syracuse</a>
+<td>November 29, 2025 09:30 AM</td>
+<td><span class="countdown-timer" data-end="November 30, 2025 08:30:00" data-start="November 29, 2025 09:30:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/ncaa-streams-7">Missouri vs Arkansas</a>
+<td>November 29, 2025 09:30 AM</td>
+<td><span class="countdown-timer" data-end="November 30, 2025 08:30:00" data-start="November 29, 2025 09:30:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/ncaa-streams-1">Cincinnati vs TCU</a>
+<td>November 29, 2025 09:30 AM</td>
+<td><span class="countdown-timer" data-end="November 30, 2025 08:30:00" data-start="November 29, 2025 09:30:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/ncaa-streams-5">Wisconsin vs Minnesota</a>
+<td>November 29, 2025 10:00 AM</td>
+<td><span class="countdown-timer" data-end="November 30, 2025 09:00:00" data-start="November 29, 2025 10:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/ncaa-streams-2">Vanderbilt vs Tennessee</a>
+<td>November 29, 2025 10:00 AM</td>
+<td><span class="countdown-timer" data-end="November 30, 2025 09:00:00" data-start="November 29, 2025 10:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/ncaa-streams-12">Penn State vs Rutgers</a>
+<td>November 29, 2025 11:00 AM</td>
+<td><span class="countdown-timer" data-end="November 30, 2025 10:00:00" data-start="November 29, 2025 11:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/ncaa-streams-9">Wake Forest vs Duke</a>
+<td>November 29, 2025 11:45 AM</td>
+<td><span class="countdown-timer" data-end="November 30, 2025 10:45:00" data-start="November 29, 2025 11:45:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/ncaa-streams-3">LSU vs Oklahoma</a>
+<td>November 29, 2025 12:00 PM</td>
+<td><span class="countdown-timer" data-end="November 30, 2025 11:00:00" data-start="November 29, 2025 12:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/ncaa-streams-13">Oregon vs Washington</a>
+<td>November 29, 2025 12:00 PM</td>
+<td><span class="countdown-timer" data-end="November 30, 2025 11:00:00" data-start="November 29, 2025 12:00:00"></span></td>
+<tr>
+</tbody></table>
+</div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
 <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
-<li class="nav-item">
-<a class="nav-link px-2 text-body-secondary" href="https://discord.gg/JhkVmejRmn">
-       Stream Request (Discord)
-      </a>
-</li>
+<li class="nav-item"><a class="nav-link px-2 text-body-secondary" href="https://discord.gg/JhkVmejRmn">Stream Request (Discord)</a></li>
 </ul>
-<p class="mb-0 text-body-secondary text-center text-lg-start">
-     Roxiestreams © 2024
-    </p>
+<p class="mb-0 text-body-secondary text-center text-lg-start">Roxiestreams © 2024</p>
 </footer>
-<script src="js/bootstrap.bundle.min.js">
-</script>
+<script src="js/bootstrap.bundle.min.js"></script>
 <script>
-    function startCountdown() {
+        function startCountdown() {
             var countdownElements = document.querySelectorAll('.countdown-timer');
 
             countdownElements.forEach(function(element) {
@@ -310,7 +210,6 @@
         }
 
         window.onload = startCountdown;
-   </script>
-</div>
+    </script>
 </div></body>
 </html>
