--- a/nfl.html
+++ b/nfl.html
@@ -95,80 +95,140 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/ncaa-streams-1">Ohio State vs Michigan/a>
-<td>November 29, 2025 04:30 AM</td>
+<td><a href="https://roxiestreams.live/ncaa-streams-1">Ohio State vs Michigan</a>
+<td>November 29, 2025 09:00 AM</td>
 <td><span class="countdown-timer" data-end="November 30, 2025 03:30:00" data-start="November 29, 2025 04:30:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/ncaa-streams-2">Texas Tech vs West Virginia</a>
-<td>November 29, 2025 05:00 AM</td>
+<td>November 29, 2025 09:00 AM</td>
 <td><span class="countdown-timer" data-end="November 30, 2025 04:00:00" data-start="November 29, 2025 05:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/ncaa-streams-3">Miami (FL) vs Pitt</a>
-<td>November 29, 2025 06:30 AM</td>
+<td>November 29, 2025 09:00 AM</td>
 <td><span class="countdown-timer" data-end="November 30, 2025 05:30:00" data-start="November 29, 2025 06:30:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/ncaa-streams-4">Houston vs Baylor</a>
-<td>November 29, 2025 07:00 AM</td>
+<td>November 29, 2025 09:00 AM</td>
 <td><span class="countdown-timer" data-end="November 30, 2025 06:00:00" data-start="November 29, 2025 07:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/ncaa-streams-5">Colorado vs Kansas State</a>
-<td>November 29, 2025 07:00 AM</td>
+<td>November 29, 2025 09:00 AM</td>
 <td><span class="countdown-timer" data-end="November 30, 2025 06:00:00" data-start="November 29, 2025 07:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/ncaa-streams-6">Ball State vs Miami (Ohio)</a>
-<td>November 29, 2025 07:00 AM</td>
+<td>November 29, 2025 09:00 AM</td>
 <td><span class="countdown-timer" data-end="November 30, 2025 06:00:00" data-start="November 29, 2025 07:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/ncaa-streams-7">Clemson vs South Carolina</a>
-<td>November 29, 2025 07:00 AM</td>
+<td>November 29, 2025 09:00 AM</td>
 <td><span class="countdown-timer" data-end="November 30, 2025 06:00:00" data-start="November 29, 2025 07:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/ncaa-streams-8">Iowa State vs Oklahoma State</a>
-<td>November 29, 2025 07:15 AM</td>
+<td>November 29, 2025 09:00 AM</td>
 <td><span class="countdown-timer" data-end="November 30, 2025 06:15:00" data-start="November 29, 2025 07:15:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/ncaa-streams-9">Kentucky vs Louisville</a>
-<td>November 29, 2025 08:00 AM</td>
+<td>November 29, 2025 09:00 AM</td>
 <td><span class="countdown-timer" data-end="November 30, 2025 07:00:00" data-start="November 29, 2025 08:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/ncaa-streams-10">UCF vs BYU</a>
-<td>November 29, 2025 09:00 AM</td>
+<td>November 29, 2025 10:00 AM</td>
 <td><span class="countdown-timer" data-end="November 30, 2025 08:00:00" data-start="November 29, 2025 09:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/ncaa-streams-11">Boston College vs Syracuse</a>
-<td>November 29, 2025 09:30 AM</td>
+<td>November 29, 2025 12:00 PM</td>
 <td><span class="countdown-timer" data-end="November 30, 2025 08:30:00" data-start="November 29, 2025 09:30:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/ncaa-streams-7">Missouri vs Arkansas</a>
-<td>November 29, 2025 09:30 AM</td>
+<td>November 29, 2025 12:30 PM</td>
 <td><span class="countdown-timer" data-end="November 30, 2025 08:30:00" data-start="November 29, 2025 09:30:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/ncaa-streams-1">Cincinnati vs TCU</a>
-<td>November 29, 2025 09:30 AM</td>
+<td>November 29, 2025 12:30 PM</td>
 <td><span class="countdown-timer" data-end="November 30, 2025 08:30:00" data-start="November 29, 2025 09:30:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/ncaa-streams-5">Wisconsin vs Minnesota</a>
-<td>November 29, 2025 10:00 AM</td>
+<td>November 29, 2025 12:30 PM</td>
 <td><span class="countdown-timer" data-end="November 30, 2025 09:00:00" data-start="November 29, 2025 10:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/ncaa-streams-2">Vanderbilt vs Tennessee</a>
-<td>November 29, 2025 10:00 AM</td>
+<td>November 29, 2025 112:30 PM</td>
 <td><span class="countdown-timer" data-end="November 30, 2025 09:00:00" data-start="November 29, 2025 10:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/ncaa-streams-12">Penn State vs Rutgers</a>
-<td>November 29, 2025 11:00 AM</td>
+<td>November 29, 2025 12:30 PM</td>
 <td><span class="countdown-timer" data-end="November 30, 2025 10:00:00" data-start="November 29, 2025 11:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/ncaa-streams-9">Wake Forest vs Duke</a>
-<td>November 29, 2025 11:45 AM</td>
+<td>November 29, 2025 12:30 PM</td>
 <td><span class="countdown-timer" data-end="November 30, 2025 10:45:00" data-start="November 29, 2025 11:45:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/ncaa-streams-3">LSU vs Oklahoma</a>
-<td>November 29, 2025 12:00 PM</td>
+<td>November 29, 2025 12:30 PM</td>
 <td><span class="countdown-timer" data-end="November 30, 2025 11:00:00" data-start="November 29, 2025 12:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/ncaa-streams-13">Oregon vs Washington</a>
-<td>November 29, 2025 12:00 PM</td>
+<td>November 29, 2025 12:30 PM</td>
+<td><span class="countdown-timer" data-end="November 30, 2025 11:00:00" data-start="November 29, 2025 12:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/ncaa-streams-6">Kennesaw State vs Liberty</a>
+<td>November 29, 2025 12:30 PM</td>
+<td><span class="countdown-timer" data-end="November 30, 2025 11:00:00" data-start="November 29, 2025 12:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/ncaa-streams-8">James Madison vs Coastal Carolina</a>
+<td>November 29, 2025 12:45 PM</td>
+<td><span class="countdown-timer" data-end="November 30, 2025 11:00:00" data-start="November 29, 2025 12:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/ncaa-streams-10">Florida State vs Florida</a>
+<td>November 29, 2025 13:30 PM</td>
+<td><span class="countdown-timer" data-end="November 30, 2025 11:00:00" data-start="November 29, 2025 12:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/ncaa-streams-11">Oregon State vs Washington State</a>
+<td>November 29, 2025 15:30 PM</td>
+<td><span class="countdown-timer" data-end="November 30, 2025 11:00:00" data-start="November 29, 2025 12:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/ncaa-streams-2">Virginia Tech vs Virginia</a>
+<td>November 29, 2025 16:00 PM</td>
+<td><span class="countdown-timer" data-end="November 30, 2025 11:00:00" data-start="November 29, 2025 12:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/ncaa-streams-5">Maryland vs Michigan State</a>
+<td>November 29, 2025 16:00 PM</td>
+<td><span class="countdown-timer" data-end="November 30, 2025 11:00:00" data-start="November 29, 2025 12:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/ncaa-streams-14">UCLA vs USC</a>
+<td>November 29, 2025 16:30 PM</td>
+<td><span class="countdown-timer" data-end="November 30, 2025 11:00:00" data-start="November 29, 2025 12:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/ncaa-streams-3">Alabama vs Auburn</a>
+<td>November 29, 2025 16:30 PM</td>
+<td><span class="countdown-timer" data-end="November 30, 2025 11:00:00" data-start="November 29, 2025 12:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/ncaa-streams-9">North Carolina vs NC State</a>
+<td>November 29, 2025 16:30 PM</td>
+<td><span class="countdown-timer" data-end="November 30, 2025 11:00:00" data-start="November 29, 2025 12:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/ncaa-streams-1">Northwestern vs Illinois</a>
+<td>November 29, 2025 16:30 PM</td>
+<td><span class="countdown-timer" data-end="November 30, 2025 11:00:00" data-start="November 29, 2025 12:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/ncaa-streams-8">Charlotte vs Tulane</a>
+<td>November 29, 2025 16:30 PM</td>
+<td><span class="countdown-timer" data-end="November 30, 2025 11:00:00" data-start="November 29, 2025 12:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/ncaa-streams-10">SMU vs California</a>
+<td>November 29, 2025 17:00 PM</td>
+<td><span class="countdown-timer" data-end="November 30, 2025 11:00:00" data-start="November 29, 2025 12:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/ncaa-streams-6">UNLV vs Nevada</a>
+<td>November 29, 2025 18:00 PM</td>
+<td><span class="countdown-timer" data-end="November 30, 2025 11:00:00" data-start="November 29, 2025 12:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/ncaa-streams-2">Notre Dame vs Standford</a>
+<td>November 29, 2025 19:30 PM</td>
+<td><span class="countdown-timer" data-end="November 30, 2025 11:00:00" data-start="November 29, 2025 12:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/ncaa-streams-5">Fresno State vs San Jose State</a>
+<td>November 29, 2025 19:30 PM</td>
 <td><span class="countdown-timer" data-end="November 30, 2025 11:00:00" data-start="November 29, 2025 12:00:00"></span></td>
 <tr>
 </tbody></table>
