--- a/nba.html
+++ b/nba.html
@@ -249,6 +249,138 @@
       </tr>
      </tbody>
     </table>
+    <h2>
+     NBA Schedule for November 30, 2025
+    </h2>
+    <table id="eventsTable">
+     <thead>
+      <tr>
+       <th>
+        Event
+       </th>
+       <th>
+        Start Time
+       </th>
+       <th>
+        Countdown
+       </th>
+      </tr>
+     </thead>
+     <tbody>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-1">
+         Houston Rockets vs Utah Jazz
+        </a>
+       </td>
+       <td>
+        November 30, 2025 12:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 01, 2025 12:00 PM:00" data-start="November 30, 2025 12:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-2">
+         Boston Celtics vs Cleveland Cavaliers
+        </a>
+       </td>
+       <td>
+        November 30, 2025 3:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 01, 2025 3:00 PM:00" data-start="November 30, 2025 3:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-3">
+         Toronto Raptors vs New York Knicks
+        </a>
+       </td>
+       <td>
+        November 30, 2025 3:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 01, 2025 3:00 PM:00" data-start="November 30, 2025 3:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-4">
+         Atlanta Hawks vs Philadelphia 76ers
+        </a>
+       </td>
+       <td>
+        November 30, 2025 3:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 01, 2025 3:00 PM:00" data-start="November 30, 2025 3:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-5">
+         Oklahoma City Thunder vs Portland Trail Blazers
+        </a>
+       </td>
+       <td>
+        November 30, 2025 3:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 01, 2025 3:00 PM:00" data-start="November 30, 2025 3:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-6">
+         San Antonio Spurs vs Minnesota Timberwolves
+        </a>
+       </td>
+       <td>
+        November 30, 2025 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 01, 2025 4:00 PM:00" data-start="November 30, 2025 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-7">
+         Memphis Grizzlies vs Sacramento Kings
+        </a>
+       </td>
+       <td>
+        November 30, 2025 6:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 01, 2025 6:00 PM:00" data-start="November 30, 2025 6:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-8">
+         New Orleans Pelicans vs Los Angeles Lakers
+        </a>
+       </td>
+       <td>
+        November 30, 2025 6:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 01, 2025 6:30 PM:00" data-start="November 30, 2025 6:30 PM:00">
+        </span>
+       </td>
+      </tr>
+     </tbody>
+    </table>
     <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
      <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
       <li class="nav-item">
