--- a/soccer.html
+++ b/soccer.html
@@ -95,16 +95,16 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-10">Chelsea vs Arsenal</a>
-<td>November 30, 2025 08:30 AM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-1">Fenerbahçe vs Galatasaray</a>
+<td>November 30, 2025 09:00 AM</td>
 <td><span class="countdown-timer" data-end="November 30, 2025 18:10:00" data-start="November 29, 2025 19:10:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-3">Celta Vigo vs Espanyol</a>
-<td>November 30, 2025 09:30 AM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-2">Birmingham City vs Watford</a>
+<td>November 30, 2025 12:00 PM</td>
 <td><span class="countdown-timer" data-end="November 30, 2025 18:10:00" data-start="November 29, 2025 19:10:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-11">Freiburg vs Mainz 05</a>
-<td>November 30, 2025 10:30 AM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-3">Rayo Vallecano vs Valencia</a>
+<td>November 30, 2025 12:00 PM</td>
 <td><span class="countdown-timer" data-end="November 30, 2025 18:10:00" data-start="November 29, 2025 19:10:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-12">Corinthians vs Botafogo</a>
