--- a/nfl.html
+++ b/nfl.html
@@ -118,209 +118,55 @@
   <div class="container container-fluid pt-2 text-white">
    <div class="mt-5">
     <h2 class="m-0" style="font-family: 'Kanit', sans-serif; font-weight: bold;">
-     Upcoming Soccer Events
+     Upcoming NFL Events
     </h2>
     <table id="eventsTable">
-    <thead>
-     <tr>
-      <th>
-       Event
-      </th>
-      <th>
-       Start Time
-      </th>
-      <th>
-       Countdown
-      </th>
-     </tr>
-    </thead>
-    <tbody>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/redzone">
-        NFL RedZone
+     <thead>
+      <tr>
+       <th>
+        Event
+       </th>
+       <th>
+        Start Time
+       </th>
+       <th>
+        Countdown
+       </th>
+      </tr>
+     </thead>
+     <tbody>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nfl-streams-1">
+         New York Giants vs New England Patriots
+        </a>
+       </td>
+       <td>
+        December 01, 2025 5:15 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 02, 2025 5:15 PM:00" data-start="December 01, 2025 5:15 PM:00">
+        </span>
+       </td>
+      </tr>
+     </tbody>
+    </table>
+    <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
+     <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
+      <li class="nav-item">
+       <a class="nav-link px-2 text-body-secondary" href="https://discord.gg/JhkVmejRmn">
+        Stream Request (Discord)
        </a>
-      </td>
-      <td>
-       November 30, 2025 10:00 AM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="December 01, 2025 10:00 AM:00" data-start="November 30, 2025 10:00 AM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nfl-streams-1">
-        San Francisco 49ers vs Cleveland Browns
-       </a>
-      </td>
-      <td>
-       November 30, 2025 10:00 AM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="December 01, 2025 10:00 AM:00" data-start="November 30, 2025 10:00 AM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nfl-streams-2">
-        Jacksonville Jaguars vs Tennessee Titans
-       </a>
-      </td>
-      <td>
-       November 30, 2025 10:00 AM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="December 01, 2025 10:00 AM:00" data-start="November 30, 2025 10:00 AM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nfl-streams-3">
-        Houston Texans vs Indianapolis Colts
-       </a>
-      </td>
-      <td>
-       November 30, 2025 10:00 AM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="December 01, 2025 10:00 AM:00" data-start="November 30, 2025 10:00 AM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nfl-streams-4">
-        New Orleans Saints vs Miami Dolphins
-       </a>
-      </td>
-      <td>
-       November 30, 2025 10:00 AM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="December 01, 2025 10:00 AM:00" data-start="November 30, 2025 10:00 AM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nfl-streams-5">
-        Atlanta Falcons vs New York
-       </a>
-      </td>
-      <td>
-       November 30, 2025 10:00 AM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="December 01, 2025 10:00 AM:00" data-start="November 30, 2025 10:00 AM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nfl-streams-6">
-        Arizona Cardinals vs Tampa Bay Buccaneers
-       </a>
-      </td>
-      <td>
-       November 30, 2025 10:00 AM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="December 01, 2025 10:00 AM:00" data-start="November 30, 2025 10:00 AM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nfl-streams-7">
-        Los Angeles Rams vs Carolina Panthers
-       </a>
-      </td>
-      <td>
-       November 30, 2025 10:00 AM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="December 01, 2025 10:00 AM:00" data-start="November 30, 2025 10:00 AM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nfl-streams-8">
-        Minnesota Vikings vs Seattle Seahawks
-       </a>
-      </td>
-      <td>
-       November 30, 2025 1:05 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="December 01, 2025 1:05 PM:00" data-start="November 30, 2025 1:05 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nfl-streams-9">
-        Buffalo Bills vs Pittsburgh Steelers
-       </a>
-      </td>
-      <td>
-       November 30, 2025 1:25 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="December 01, 2025 1:25 PM:00" data-start="November 30, 2025 1:25 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nfl-streams-10">
-        Las Vegas Raiders vs Los Angeles Rams
-       </a>
-      </td>
-      <td>
-       November 30, 2025 1:25 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="December 01, 2025 1:25 PM:00" data-start="November 30, 2025 1:25 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nfl-streams-11">
-        Denver Broncos vs Washington Commanders
-       </a>
-      </td>
-      <td>
-       November 30, 2025 5:20 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="December 01, 2025 5:20 PM:00" data-start="November 30, 2025 5:20 PM:00">
-       </span>
-      </td>
-     </tr>
-    </tbody>
-   </table>
-   <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
-    <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
-     <li class="nav-item">
-      <a class="nav-link px-2 text-body-secondary" href="https://discord.gg/JhkVmejRmn">
-       Stream Request (Discord)
-      </a>
-     </li>
-    </ul>
-    <p class="mb-0 text-body-secondary text-center text-lg-start">
-     Roxiestreams © 2024
-    </p>
-   </footer>
-   <script src="js/bootstrap.bundle.min.js">
-   </script>
-   <script>
-    function startCountdown() {
+      </li>
+     </ul>
+     <p class="mb-0 text-body-secondary text-center text-lg-start">
+      Roxiestreams © 2024
+     </p>
+    </footer>
+    <script src="js/bootstrap.bundle.min.js">
+    </script>
+    <script>
+     function startCountdown() {
             var countdownElements = document.querySelectorAll('.countdown-timer');
 
             countdownElements.forEach(function(element) {
@@ -349,7 +195,8 @@
         }
 
         window.onload = startCountdown;
-   </script>
+    </script>
+   </div>
   </div>
  </body>
 </html>
