--- a/index.html
+++ b/index.html
@@ -118,24 +118,24 @@
             </thead>
             <tbody>
                 <tr>
-                    <td><a href="https://roxiestreams.live/soccer">Premier League</td>
-                    <td>November 29, 2025 07:00 AM</td>
-                    <td><span class="countdown-timer" data-start="November 29, 2025 12:00:00" data-end="November 30, 2025 23:30:00"></span></td>
+                    <td><a href="https://roxiestreams.live/soccer-streams-3">Laliga</td>
+                    <td>December 01, 2025 12:00 PM</td>
+                    <td><span class="countdown-timer" data-start="December 01, 2025 12:00:00" data-end="December 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
-                    <td><a href="https://roxiestreams.live/nfl">NCAA (College Football)</td>
-                    <td>November 29, 2025 09:00 AM</td>
-                    <td><span class="countdown-timer" data-start="November 29, 2025 12:00:00" data-end="November 30, 2025 23:30:00"></span></td>
+                    <td><a href="https://roxiestreams.live/nba">NBA</td>
+                    <td>December 01, 2025 16:00 PM</td>
+                    <td><span class="countdown-timer" data-start="December 01, 2025 16:00:00" data-end="December 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
-                    <td><a href="https://roxiestreams.live/f1-streams">Formula 1</td>
-                    <td>November 29, 2025 10:00 AM</td>
-                    <td><span class="countdown-timer" data-start="November 29, 2025 10:00:00" data-end="November 30, 2025 23:30:00"></span></td>
+                    <td><a href="https://roxiestreams.live/wwe-streams">WWE RAW</td>
+                    <td>December 01, 2025 17:00 PM</td>
+                    <td><span class="countdown-timer" data-start="December 01, 2025 17:00:00" data-end="December 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
-                    <td><a href="https://roxiestreams.live/wwe-streams">WWE Survivor Series: Wargame</td>
-                    <td>November 29, 2025 16:00 PM</td>
-                    <td><span class="countdown-timer" data-start="November 29, 2025 16:00:00" data-end="November 30, 2025 23:30:00"></span></td>
+                    <td><a href="https://roxiestreams.live/nfl-streams-1">NFL (MNF)</td>
+                    <td>December 01, 2025 17:15 PM</td>
+                    <td><span class="countdown-timer" data-start="December 01, 2025 17:15:00" data-end="December 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
             </tbody>
