--- a/soccer.html
+++ b/soccer.html
@@ -111,6 +111,10 @@
 <td>December 02, 2025 12:00 PM</td>
 <td><span class="countdown-timer" data-end="December 03, 2025 11:00:00" data-start="December 02, 2025 12:00:00"></span></td>
 <tr>
+<td><a href="https://roxiestreams.live/soccer-streams-8">Juventus vs Udinese</a>
+<td>December 02, 2025 12:00 PM</td>
+<td><span class="countdown-timer" data-end="December 03, 2025 11:00:00" data-start="December 02, 2025 12:00:00"></span></td>
+<tr>
 <td><a href="https://roxiestreams.live/soccer-streams-5">Newcastle United vs Tottenham</a>
 <td>December 02, 2025 12:15 PM</td>
 <td><span class="countdown-timer" data-end="December 03, 2025 11:15:00" data-start="December 02, 2025 12:15:00"></span></td>
