--- a/soccer.html
+++ b/soccer.html
@@ -95,39 +95,95 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-1">Bournemouth vs Everton</a>
-<td>December 02, 2025 11:30 AM</td>
-<td><span class="countdown-timer" data-end="December 03, 2025 10:30:00" data-start="December 02, 2025 11:30:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-1">Napoli vs Cagliarin</a>
+<td>December 03, 2025 09:00 AM</td>
+<td><span class="countdown-timer" data-end="December 04, 2025 08:00:00" data-start="December 03, 2025 09:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-2">Fulham vs Manchester City</a>
-<td>December 02, 2025 11:30 AM</td>
-<td><span class="countdown-timer" data-end="December 03, 2025 10:30:00" data-start="December 02, 2025 11:30:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-2">Bochum vs Stuttgart</a>
+<td>December 03, 2025 09:00 AM</td>
+<td><span class="countdown-timer" data-end="December 04, 2025 08:00:00" data-start="December 03, 2025 09:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-3">Dortmund vs Leverkusen</a>
-<td>December 02, 2025 12:00 PM</td>
-<td><span class="countdown-timer" data-end="December 03, 2025 11:00:00" data-start="December 02, 2025 12:00:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-3">Athletic Club vs Real Madrid</a>
+<td>December 03, 2025 10:00 AM</td>
+<td><span class="countdown-timer" data-end="December 04, 2025 09:00:00" data-start="December 03, 2025 10:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-4">Barcelona vs Atlético Madrid</a>
-<td>December 02, 2025 12:00 PM</td>
-<td><span class="countdown-timer" data-end="December 03, 2025 11:00:00" data-start="December 02, 2025 12:00:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-4">Arsenal vs Brentford</a>
+<td>December 03, 2025 11:30 AM</td>
+<td><span class="countdown-timer" data-end="December 04, 2025 10:30:00" data-start="December 03, 2025 11:30:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-8">Juventus vs Udinese</a>
-<td>December 02, 2025 12:00 PM</td>
-<td><span class="countdown-timer" data-end="December 03, 2025 11:00:00" data-start="December 02, 2025 12:00:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-5">Burnley vs Crystal Palace</a>
+<td>December 03, 2025 11:30 AM</td>
+<td><span class="countdown-timer" data-end="December 04, 2025 10:30:00" data-start="December 03, 2025 11:30:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-5">Newcastle United vs Tottenham</a>
-<td>December 02, 2025 12:15 PM</td>
-<td><span class="countdown-timer" data-end="December 03, 2025 11:15:00" data-start="December 02, 2025 12:15:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-6">Brighton vs Aston Villa</a>
+<td>December 03, 2025 11:30 AM</td>
+<td><span class="countdown-timer" data-end="December 04, 2025 10:30:00" data-start="December 03, 2025 11:30:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-6">Vasco Da Gama vs Mirassol</a>
-<td>December 02, 2025 14:00 PM</td>
-<td><span class="countdown-timer" data-end="December 03, 2025 13:00:00" data-start="December 02, 2025 14:00:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-7">Wolves vs Nottingham Forest</a>
+<td>December 03, 2025 11:30 AM</td>
+<td><span class="countdown-timer" data-end="December 04, 2025 10:30:00" data-start="December 03, 2025 11:30:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-7">Grêmio vs Fluminense</a>
-<td>December 02, 2025 16:30 PM</td>
-<td><span class="countdown-timer" data-end="December 03, 2025 15:30:00" data-start="December 02, 2025 16:30:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-8">Union Berlin vs Bayern München</a>
+<td>December 03, 2025 11:45 AM</td>
+<td><span class="countdown-timer" data-end="December 04, 2025 10:45:00" data-start="December 03, 2025 11:45:00"></span></td>
 <tr>
-</tbody></table>
+<td><a href="https://roxiestreams.live/soccer-streams-1">Dundee United vs Rangers</a>
+<td>December 03, 2025 11:45 AM</td>
+<td><span class="countdown-timer" data-end="December 04, 2025 10:45:00" data-start="December 03, 2025 11:45:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-10">Inter Milan vs Venezia</a>
+<td>December 03, 2025 12:00 PM</td>
+<td><span class="countdown-timer" data-end="December 04, 2025 11:00:00" data-start="December 03, 2025 12:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-11">Leeds United vs Chelsea</a>
+<td>December 03, 2025 12:15 PM</td>
+<td><span class="countdown-timer" data-end="December 04, 2025 11:15:00" data-start="December 03, 2025 12:15:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-12">Liverpool vs Sunderland</a>
+<td>December 03, 2025 12:15 PM</td>
+<td><span class="countdown-timer" data-end="December 04, 2025 11:15:00" data-start="December 03, 2025 12:15:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-9">Inter Milan vs Venezia</a>
+<td>December 03, 2025 12:00 PM</td>
+<td><span class="countdown-timer" data-end="December 04, 2025 11:00:00" data-start="December 03, 2025 12:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-13">Fortaleza vs Corinthians</a>
+<td>December 03, 2025 14:00 PM</td>
+<td><span class="countdown-timer" data-end="December 04, 2025 13:00:00" data-start="December 03, 2025 14:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-14">Juventude vs Santos</a>
+<td>December 03, 2025 14:30 PM</td>
+<td><span class="countdown-timer" data-end="December 04, 2025 13:30:00" data-start="December 03, 2025 14:30:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-15">Bahia vs Sport Recife</a>
+<td>December 03, 2025 15:00 PM</td>
+<td><span class="countdown-timer" data-end="December 04, 2025 14:00:00" data-start="December 03, 2025 15:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-16">São Paulo vs Internacional</a>
+<td>December 03, 2025 15:00 PM</td>
+<td><span class="countdown-timer" data-end="December 04, 2025 14:00:00" data-start="December 03, 2025 15:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-17">Flamengo vs Ceará</a>
+<td>December 03, 2025 16:30 PM</td>
+<td><span class="countdown-timer" data-end="December 04, 2025 15:30:00" data-start="December 03, 2025 16:30:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-18">Atlético Mineiro vs Palmeiras</a>
+<td>December 03, 2025 16:30 PM</td>
+<td><span class="countdown-timer" data-end="December 04, 2025 15:30:00" data-start="December 03, 2025 16:30:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-17">Flamengo vs Ceará</a>
+<td>December 03, 2025 16:30 PM</td>
+<td><span class="countdown-timer" data-end="December 04, 2025 15:30:00" data-start="December 03, 2025 16:30:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-18">Cruz Azul vs Tigres UANL</a>
+<td>December 03, 2025 17:00 PM</td>
+<td><span class="countdown-timer" data-end="December 04, 2025 16:00:00" data-start="December 03, 2025 17:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-19">Monterrey vs Toluca</a>
+<td>December 03, 2025 19:10 PM</td>
+<td><span class="countdown-timer" data-end="December 04, 2025 18:10:00" data-start="December 03, 2025 19:10:00"></span></td>
+<tr>
+</tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></tbody></table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
 <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
