--- a/nba.html
+++ b/nba.html
@@ -221,6 +221,152 @@
       </tr>
      </tbody>
     </table>
+    <h2>
+     NBA Schedule for December 03, 2025
+    </h2>
+    <table id="eventsTable">
+     <thead>
+      <tr>
+       <th>
+        Event
+       </th>
+       <th>
+        Start Time
+       </th>
+       <th>
+        Countdown
+       </th>
+      </tr>
+     </thead>
+     <tbody>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-1">
+         Portland Trail Blazers vs Cleveland Cavaliers
+        </a>
+       </td>
+       <td>
+        December 03, 2025 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 04, 2025 4:00 PM:00" data-start="December 03, 2025 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-2">
+         Denver Nuggets vs Indiana Pacers
+        </a>
+       </td>
+       <td>
+        December 03, 2025 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 04, 2025 4:00 PM:00" data-start="December 03, 2025 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-3">
+         San Antonio Spurs vs Orlando Magic
+        </a>
+       </td>
+       <td>
+        December 03, 2025 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 04, 2025 4:00 PM:00" data-start="December 03, 2025 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-4">
+         Los Angeles Clippers vs Atlanta Hawks
+        </a>
+       </td>
+       <td>
+        December 03, 2025 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 04, 2025 4:30 PM:00" data-start="December 03, 2025 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-5">
+         Charlotte Hornets vs New York Knicks
+        </a>
+       </td>
+       <td>
+        December 03, 2025 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 04, 2025 4:30 PM:00" data-start="December 03, 2025 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-6">
+         Brooklyn Nets vs Chicago Bulls
+        </a>
+       </td>
+       <td>
+        December 03, 2025 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 04, 2025 5:00 PM:00" data-start="December 03, 2025 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-7">
+         Sacramento Kings vs Houston Rockets
+        </a>
+       </td>
+       <td>
+        December 03, 2025 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 04, 2025 5:00 PM:00" data-start="December 03, 2025 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-8">
+         Detroit Pistons vs Milwaukee Bucks
+        </a>
+       </td>
+       <td>
+        December 03, 2025 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 04, 2025 5:00 PM:00" data-start="December 03, 2025 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-9">
+         Miami Heat vs Dallas Mavericks
+        </a>
+       </td>
+       <td>
+        December 03, 2025 5:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 04, 2025 5:30 PM:00" data-start="December 03, 2025 5:30 PM:00">
+        </span>
+       </td>
+      </tr>
+     </tbody>
+    </table>
     <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
      <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
       <li class="nav-item">
